Drop the tweak to avoid inter-language link overlaps in-page anchors
It is not work well and useless...

--- a/Highlight_interlanguage_links_for_Wikipedia.user.css
+++ b/Highlight_interlanguage_links_for_Wikipedia.user.css
@@ -29,13 +29,6 @@
 
   :target {
     font-weight: bold !important;
-    position: relative !important;
-  }
-  :target::before, :target::after {
-    content: 'x';
-    display: block;
-    top: -2.4rem;
-    position: absolute;
-    visibility: hidden;
+    background-color: moccasin !important;
   }
 }
